tests/ui/impl-trait/issues/issue-54840.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-54840.rs:5:13
   |
LL |     let j: &impl Add = &i;
   |             ^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
